--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,32 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/addons/p5.sound.min.js"></script>
 <!--     <link rel="stylesheet" type="text/css" href="style.css"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+  .cardButts{  
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 20px;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  height: 110px;
+  text-align: center;
+}
+.cardButts {border-radius: 4px;}
+</style>
+    <body>
+      <button class="Car button2">card#</button> 
+    </body>
   </head>
   <body>
     <script src="sketch.js"></script>
   </body>
 </html>
+
+
+
+
+
