--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 <!--     <link rel="stylesheet" type="text/css" href="style.css"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
-  .cardButts{  
+  .buttonStyle{  
   background-color: #4CAF50; /* Green */
   border: none;
   color: white;
@@ -19,14 +19,11 @@
   font-size: 16px;
   margin: 4px 2px;
   cursor: pointer;
-  height: 110px;
+  height: 100px;
   text-align: center;
 }
-.cardButts {border-radius: 4px;}
+.buttonStyle {border-radius: 4px;}
 </style>
-    <body>
-      <button class="Car button2">card#</button> 
-    </body>
   </head>
   <body>
     <script src="sketch.js"></script>
