--- a/public/screen/index.html
+++ b/public/screen/index.html
@@ -11,11 +11,7 @@
   </head>
   <body>
     <script src="sketch.js"></script>
-    <div id="settingsContainer">
-      <p>
-      level: <span id='level'>1</span>
-      </p>
-    </div>
+    <div id="settingsContainer"></div>
     <div id="canvasContainer"></div>
   </body>
 </html>
